--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.11.0",
     "axois": "^0.0.1-security",
     "chart.js": "^4.5.0",
+    "chartjs-chart-treemap": "^3.1.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
