--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "axois": "^0.0.1-security",
     "chart.js": "^4.5.0",
     "chartjs-chart-treemap": "^3.1.0",
+    "colorful": "^2.1.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
+    "react-colorful": "^5.6.1",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.2"
